update to use input

--- a/.github/actions/update-version/action.yml
+++ b/.github/actions/update-version/action.yml
@@ -15,6 +15,4 @@ inputs:
 runs:
   steps:
     - name: Thing
-      run: echo "oh hai: ${{ env.files }}"
-      env:
-        files: ${{ inputs.files }}
+      run: echo "oh hai: ${{ inputs.files }}"
