--- a/.github/actions/update-version/action.yml
+++ b/.github/actions/update-version/action.yml
@@ -17,7 +17,7 @@ runs:
   steps:
     - id: Thing
       name: Thing
-      run: version.sh
+      run: .github/actions/update-version/version.sh
       shell: bash
       working-directory: ${{ env.GITHUB_WORKSPACE }}
       env:
