--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,10 +34,23 @@ jobs:
           current_version: ${{ env.current_version }}
           files: "mkdocs.yml,pom.xml,**/*pom.xml,README.md"
 
+      - id:  upload-artifact
+        name: Upload artifact
+        uses: actions/upload-artifact@0b7f8abb1508181956e8e162db84b466c27e18ce
+        with:
+          name: workspace
+          path: .
+
   build:
     runs-on: ubuntu-latest
     needs: update-version
     steps:
+      - id: download-artifact
+        name: Download artifact
+        uses: actions/download-artifact@9bc31d5ccc31df68ecc42ccf4149144866c47d8a
+        with:
+          name: workspace
+
       - id: test
         name: test
         run: ls -laR .
