--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,6 +44,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
     needs: update-version
+    strategy:
+      max-parallel: 5
+      matrix:
+        java: [8, 11, 15, 16, 17, 18, 19, 20 ]
     steps:
       - id: download-artifact
         name: Download artifact
@@ -51,6 +55,14 @@ jobs:
         with:
           name: workspace
 
-      - id: test
-        name: test
-        run: ls -laR .
+      - id: setup-java 
+        name: Setup java
+        uses: actions/setup-java@cd89f46ac9d01407894225f350157564c9c7cee2
+        with:
+          distribution: "corretto"
+          java-version: ${{ matrix.java }}
+          cache: "maven"
+
+      - id: build-with-maven
+        name: Build with Maven
+        run: mvn -B install --file pom.xml
