--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,7 +32,7 @@ jobs:
         with:
           release_version: ${{ inputs.release_version }}
           current_version: ${{ env.current_version }}
-          files: "mkdocs.yml,pom.xml,**/*pom.xml,README.md"
+          files: "mkdocs.yml,pom.xml,**/pom.xml,**/*/pom.xml,README.md"
 
       - id:  upload-artifact
         name: Upload artifact
