--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -94,6 +94,6 @@ jobs:
         name: Build with Maven
         run: mvn -Prelease clean deploy -DskipTests
         env:
-          MAVEN_USERNAME: ${{ secrets.OSSRH_JIRA_USERNAME }}
-          MAVEN_PASSWORD: ${{ secrets.OSSRH_JIRA_PASSWORD }}
+          MAVEN_USERNAME: ${{ secrets.MAVEN_USERNAME }}
+          MAVEN_PASSWORD: ${{ secrets.MAVEN_PASSWORD }}
           GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
