--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -91,6 +91,9 @@ jobs:
           gpg-private-key: ${{ secrets.GPG_SIGNING_KEY }} # Value of the GPG private key to import
           gpg-passphrase: GPG_PASSPHRASE # env variable for GPG private key passphrase
 
+      - name: Setup tmate session
+        uses: mxschmitt/action-tmate@v3
+        
       - id: build-and-release-with-maven
         name: Build with Maven
         run: mvn -Prelease clean deploy -DskipTests
