--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -93,7 +93,9 @@ jobs:
 
       - name: Setup tmate session
         uses: mxschmitt/action-tmate@v3
-        
+        with:
+          limit-access-to-actor: true
+
       - id: build-and-release-with-maven
         name: Build with Maven
         run: mvn -Prelease clean deploy -DskipTests
