--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -79,6 +79,12 @@ jobs:
     environment: Release
     needs: build
     steps:
+      - id: download-artifact
+        name: Download artifact
+        uses: actions/download-artifact@9bc31d5ccc31df68ecc42ccf4149144866c47d8a
+        with:
+          name: workspace
+
       - id: setup-java 
         name: Setup java
         uses: actions/setup-java@cd89f46ac9d01407894225f350157564c9c7cee2
@@ -90,11 +96,6 @@ jobs:
           server-password: ${{ secrets.MAVEN_PASSWORD }}
           gpg-private-key: ${{ secrets.GPG_SIGNING_KEY }} # Value of the GPG private key to import
           gpg-passphrase: GPG_PASSPHRASE # env variable for GPG private key passphrase
-
-      - name: Setup tmate session
-        uses: mxschmitt/action-tmate@v3
-        with:
-          limit-access-to-actor: true
 
       - id: build-and-release-with-maven
         name: Build with Maven
