--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -92,8 +92,8 @@ jobs:
           distribution: 'zulu'
           java-version: 8
           server-id: ossrh
-          server-username: ${{ secrets.MAVEN_USERNAME }}
-          server-password: ${{ secrets.MAVEN_PASSWORD }}
+          server-username: MAVEN_USERNAME # env var name
+          server-password: MAVEN_PASSWORD # env var pass
           gpg-private-key: ${{ secrets.GPG_SIGNING_KEY }} # Value of the GPG private key to import
           gpg-passphrase: GPG_PASSPHRASE # env variable for GPG private key passphrase
 
@@ -101,6 +101,6 @@ jobs:
         name: Build with Maven
         run: mvn -Prelease clean deploy -DskipTests
         env:
-          MAVEN_USERNAME: ${{ secrets.OSSH_USERNAME }}
-          MAVEN_PASSWORD: ${{ secrets.OSSH_PASSWORD }}
+          MAVEN_USERNAME: ${{ secrets.MAVEN_USERNAME }}
+          MAVEN_PASSWORD: ${{ secrets.MAVEN_PASSWORD }}
           GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
