--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,9 +29,7 @@ jobs:
 
       - id: set-version
         name: Set current release version env variable
-        run: |
-          echo "CURRENT_VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)" >> $GITHUB_ENV
-          git status -a
+        run: echo "CURRENT_VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)" >> $GITHUB_ENV
 
       - id: change-version
         name: Version code with release version
@@ -43,6 +41,10 @@ jobs:
           release_version: ${{ inputs.release_version }}
           current_version: ${{ env.current_version }}
           files: "./mkdocs.yml,pom.xml,./README.md"
+
+      - id: status
+        name: Show git status
+        run: git status
 
       - id:  upload-artifact
         name: Upload artifact
@@ -128,9 +130,12 @@ jobs:
           git config user.name "Powertools for AWS Lambda (Java) bot"
           git config user.email "aws-lambda-powertools-feedback@amazon.com"
 
+      - id: status
+        name: Show git status
+        run: git status
+
       - name: Create Git Tag
         run: |
-          git status -a
           git commit -am "chore: version bump"
           git tag -a v"${RELEASE_VERSION}" -m "release_version: v${RELEASE_VERSION}"
           git push origin v"${RELEASE_VERSION}"
