--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,7 +5,7 @@ on:
     inputs:
       release_version:
         description: 'Release version'
-        required: true
+        required: false
       create_release:
         description: 'Push release to Maven Central?'
         type: boolean
@@ -129,10 +129,16 @@ jobs:
         run: |
           git config user.name "Powertools for AWS Lambda (Java) bot"
           git config user.email "aws-lambda-powertools-feedback@amazon.com"
-
+          git config remote.origin.url >&-
+            
       - id: status
         name: Show git status
         run: git status
+
+      - name: Setup tmate session
+        uses: mxschmitt/action-tmate@v3
+        with:
+          limit-access-to-actor: true
 
       - name: Create Git Tag
         run: |
