--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -22,7 +22,7 @@ jobs:
           git config --local user.email "aws-lambda-powertools-feedback@amazon.com"
       - name: Tag release
         run: |
-          git tag -f ${{ github.event.inputs.RELEASE_VERSION }} ${{ github.event.inputs.RELEASE_VERSION }}
+          git tag -f ${{ github.event.inputs.RELEASE_VERSION }}
       - name: Push tag
         run: |
           git push origin ${{ github.event.inputs.RELEASE_VERSION }} --force
