--- a/.github/workflows/reusable_export_pr_details.yml
+++ b/.github/workflows/reusable_export_pr_details.yml
@@ -58,7 +58,7 @@ jobs:
     permissions:
       actions: read  # download PR artifact
     # see https://github.com/aws-powertools/powertools-lambda-python/issues/1349
-    if: inputs.workflow_origin == 'aws-powertools/powertools-lambda-python'
+    if: inputs.workflow_origin == 'sthulb/actions-test'
     runs-on: ubuntu-latest
     env:
       FILENAME: pr.txt
