--- a/.github/workflows/label_pr_on_title.yml
+++ b/.github/workflows/label_pr_on_title.yml
@@ -25,6 +25,7 @@ on:
     workflows: ["Record PR details"]
     types:
       - completed
+  workflow_dispatch: {}
 
 permissions:
   contents: read
